<resources>
    <string name="app_name">UnibagueApp</string>
    <string name="titAsignaturas">Asignaturas</string>
    <string name="nomAsignatura">Nombre Asignatura</string>
    <string name="agregarAsignatura">Agregar Asignatura</string>
    <string name="nomDocente">Nombre Docente</string>
    <string name="notaFinal">Nota final</string>
    <string name="numeroCreditos">Numero Creditos</string>
    <string name="guardar">Guardar</string>
    <string name="labNombreDocente">Nombre Docente:</string>
    <string name="labNombreAsignatura">Nombre Asignatura:</string>
    <string name="labNota">Nota:</string>
    <string name="labCreditos">Creditos:</string>
    <string name="btncalcularppa">Calcular PPA</string>
    <string name="labTuPromedio">Tu PPA es de :</string>
    <string name="error_input">Espacio Requerido</string>
    <string name="title_activity_tareas">tareasActivity</string>
    <string name="labNombreTarea">Nombre de la Tarea:</string>
    <string name="labDescripcion">Descripcion de la Tarea:</string>
    <string name="labFechaEntrega">Fecha de entrega:</string>
    <string name="labPorcentaje">Porcentaje: </string>
    <string name="title_activity_agregar_tarea">Agrega una tarea</string>
    <string name="hintNombreTarea">Nombre de la tarea</string>
    <string name="hintDescripcion">Descripción</string>
    <string name="titleToolbarTareas">Tareas de </string>
    <string name="hintFechaEntrega">Fecha de entrega</string>
    <string name="hintHoraEntrega">Hora de entrega</string>
    <string name="labPorcentajeCompletado">Tu Progreso :</string>
    <string name="hintPorcentaje">Porcentaje de la tarea</string>
    <string name="hintNota">Nota</string>
    <string name="validar_txt_nota">La nota debe ser mayor a 0 y menor a 5</string>
    <string name="title_activity_editar_tarea">Edita tu tarea</string>
    <string name="validaciont_edit_text_porcentaje">esta excediendo el 100%, actualmente hay </string>


    <string-array name="semestres_spinner">
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
        <item>Sexto</item>
        <item>Septimo</item>
        <item>Octavo</item>
        <item>Noveno</item>
        <item>Decimo</item>
    </string-array>
    <string name="labEsParcial">¿Es Parcial?</string>
    <string name="labSemestre">Semestre:</string>
    <string name="codigo_asignatura">Codigo Asignatura</string>
    <string name="title_activity_buscar_asignatura">BuscarAsignatura</string>
    <string name="title_activity_buscar">Buscar Asignatura</string>
</resources>
