<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.BuscarAsignatura"
    tools:showIn="@layout/activity_buscar_asignatura">

    <EditText
        android:id="@+id/codigoABuscar"
        android:layout_width="296dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/vectorcuadrosagregar"
        android:ems="10"
        android:focusedByDefault="true"
        android:gravity="center"
        android:hint="@string/codigo_asignatura"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardBuscar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigoABuscar"
        app:layout_constraintVertical_bias="0.033"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/itembackgroundvector">

            <TextView
                android:id="@+id/txtCodigoAsignatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="Codigo X"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtNAsignatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="68dp"
                android:text="Materia X"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCodigoAsignatura"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtNDocente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="48dp"
                android:text="Docente X"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNAsignatura"
                app:layout_constraintVertical_bias="0.142" />

            <EditText
                android:id="@+id/txtCreditosItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="XX"
                android:textSize="14sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labCreditos"
                app:layout_constraintTop_toBottomOf="@+id/txtNDocente"
                app:layout_constraintVertical_bias="0.372" />

            <EditText
                android:id="@+id/txtSemestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="8dp"
                android:text="X"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnActualizar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.978" />

            <TextView
                android:id="@+id/labCreditos"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/labCreditos"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNDocente"
                app:layout_constraintVertical_bias="0.533" />

            <TextView
                android:id="@+id/labSemestre"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/labSemestre"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtSemestre"
                app:layout_constraintStart_toEndOf="@+id/txtCreditosItem" />

            <Button
                android:id="@+id/btnHabilitarEdicion"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:drawable/ic_menu_edit"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="btnHabilitarEdicion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="btnEditar"
                android:text="Actualizar"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/ic_search_category_default"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/codigoABuscar"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>